--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background-color: #000000;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   font-weight: 300 !important;
 }
 
@@ -21,13 +21,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h4, h5, h6 {
-  font-family: 'Source Code Pro', monospace;
+h1,
+h2,
+h4,
+h5,
+h6 {
+  font-family: "Source Code Pro", monospace;
   color: #ffffff;
 }
 
 h3 {
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
 p {
@@ -37,18 +41,33 @@ p {
 a {
   color: #08e237;
   font-style: italic;
- 
 }
 
 a:hover {
   color: #ffffff;
-  opacity: .8;
+  opacity: 0.8;
   text-decoration: none;
   text-decoration: underline;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.info-square {
+  border: 2px dashed white;
+
+  border-radius: 10px;
+  margin: 40% 0px 0px 40%;
+  padding: 20px;
+  text-align: left;
+}
+.info-square p {
+  margin-bottom: 0;
+}
+
 .primary-btn {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   background-color: #ffffff;
   color: #000000 !important;
   padding: 15px 40px;
@@ -59,13 +78,11 @@ a:hover {
 .primary-btn:hover {
   background-color: #ffffff;
   color: #000000;
-  opacity: .9;
+  opacity: 0.9;
 }
 
-
-
 section {
-  padding: 100px 0;
+  padding: 0 0;
 }
 
 button {
@@ -73,7 +90,7 @@ button {
   border: 0px;
 }
 
-.template-button { 
+.template-button {
   position: fixed;
   padding: 10px 30px;
   border-radius: 5px;
@@ -85,23 +102,8 @@ button {
   display: inline-block;
 }
 
-.navbar {
-  background-color: #000000;
-}
-
-.nav-link {
-  font-weight: 500;
-  color: #ffffff;
-}
-
-.navbar-toggler {
-  font-size: 2.2rem;
-  color: #ffffff;
-}
-
-.navbar-toggler:focus {
-  outline: none;
-  box-shadow: none;
+.navigation {
+  text-align: right;
 }
 
 .header-logo {
@@ -110,19 +112,18 @@ button {
 }
 
 .heading-content {
-  
   margin: 0 auto;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   color: #ffffff;
 }
 
 .heading-content h2 {
   line-height: 1.8;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
 }
 
 .heading-content p {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   font-size: 20px;
   color: rgb(240, 240, 240);
 }
@@ -145,16 +146,16 @@ Hero
 ////////////////////////////////////////*/
 
 #hero h1 {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   font-style: bold;
   font-size: 60px;
   line-height: 1.6;
-  color: #ffffff; 
+  color: #ffffff;
 }
 
 .hero-container {
   position: relative;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .hero-details {
@@ -166,7 +167,7 @@ Hero
 }
 
 .hero-details h3 {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   font-size: 36px;
   color: #000000;
 }
@@ -192,22 +193,17 @@ Portfolio
 ////////////////////////////////////////*/
 
 .portfolio-container {
- 
   margin: 0px 0;
- 
 }
 
-
-
 .portfolio-details {
-  
   color: #ffffff;
   top: 20px;
   left: 20px;
 }
 
 .portfolio-details h3 {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   margin-top: 5px;
 }
 
@@ -225,7 +221,7 @@ Portfolio
 
 .portfolio-link:hover {
   color: #000000;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .portfolio-link i {
@@ -234,44 +230,37 @@ Portfolio
   vertical-align: middle;
 }
 
-.icfwywm{
-  
-}
-
-.icfwywm img{
+.work img {
   width: 100%;
   border-radius: 5px;
 }
-.icfwywm img:hover{
-  color: #424242; 
--webkit-transition: all .1s ease-in;
--moz-transition: all .1s ease-in;
--ms-transition: all .1s ease-in;
--o-transition: all .1s ease-in;
-transition: all .1s ease-in;
-opacity: 1;
-transform: scale(1.01);
--ms-transform: scale(1.01); /* IE 9 */
--webkit-transform: scale(1.01); /* Safari and Chrome */
-
+.work img:hover {
+  color: #424242;
+  -webkit-transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  -ms-transition: all 0.1s ease-in;
+  -o-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+  opacity: 1;
+  transform: scale(1.01);
+  -ms-transform: scale(1.01); /* IE 9 */
+  -webkit-transform: scale(1.01); /* Safari and Chrome */
 }
-.icfwywm-video{
-  position:relative;
-  width:100%;
-  height:100%;
-  padding-bottom:56%;
- 
+.work-video {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 56%;
 }
 
-.icfwywm-video iframe{
-  position:absolute;
-  
+.work-video iframe {
+  position: absolute;
+
   border-radius: 5px;
 
-  width:96%;
-  height:100%;
+  width: 96%;
+  height: 100%;
 }
-
 
 /*/////////////////////////////////////////
 Blog
@@ -281,18 +270,18 @@ Blog
   position: relative;
   padding: 40px;
   margin: 10px 0;
-  border: 1px solid rgba(255,255,255,0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   color: #ffffff;
 }
 
 .blog-post h4 {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   line-height: 1.6;
   margin-bottom: 40px;
 }
 
 .blog-post p {
-  color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
   line-height: 1.8;
   margin-bottom: 40px;
 }
@@ -317,7 +306,7 @@ Blog
 .label-tag span {
   color: #000000;
   font-size: 12px;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 
 .label-tag a {
@@ -335,7 +324,7 @@ Footer
 
 #footer {
   color: #ffffff;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   text-align: center;
   padding: 90px 0 30px 0;
 }
@@ -345,10 +334,10 @@ Footer
 }
 
 #footer small {
-  color: rgba(255,255,255,0.5);
-  font-family: 'Source Code Pro', monospace;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: "Source Code Pro", monospace;
   font-weight: 300;
-  letter-spacing: .25em;
+  letter-spacing: 0.25em;
   margin-top: 30px;
   display: inline-block;
 }
@@ -366,42 +355,44 @@ Footer
 Media queries
 ////////////////////////////////////////*/
 
-@media (max-width: 575.98px) { 
+@media (max-width: 575.98px) {
   section {
-      padding: 70px 10px;
+    padding: 70px 10px;
   }
   #hero h1 {
-      font-size: 30px;
+    font-size: 30px;
   }
   .hidden-mobile {
-      display: none;
+    display: none;
   }
   .mobile-only h3 {
-      font-size: 22px;
-      margin-top: 5px;
+    font-size: 22px;
+    margin-top: 5px;
   }
   .mobile-only p {
-      font-size: 20px;
-      color: rgba(255,255,255,0.5);
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.5);
   }
   .heading-content h2 {
-      font-size: 22px;
+    font-size: 22px;
   }
   .list-inline-item {
-      margin: 0 15px !important;
+    margin: 0 15px !important;
   }
   .mobile-only {
-      display: inline-block;
-      color: #ffffff;
+    display: inline-block;
+    color: #ffffff;
   }
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
   .portfolio-details h3 {
-      font-size: 22px;
+    font-size: 22px;
   }
 }
 
-@media (max-width: 991.98px) {  }
+@media (max-width: 991.98px) {
+}
 
-@media (max-width: 1199.98px) {  }
+@media (max-width: 1199.98px) {
+}
